fix text wrapping around real artwork, and the shuffle buttons urls
git-svn-id: file:///home/awy/mirror/slim/trunk/server@6728 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/skin.css
+++ b/HTML/Fishbone/skin.css
@@ -399,7 +399,7 @@ A.linkbtn:link {
 {
 	position: absolute;
 	top: 0px;
-	left: 110px;
+	left: 115px;
 }
 
 #TopMenu1 A
